# wot-ai-commentator

./: .gitignore  README.md  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-07-11-lol-ally-teasing.md  2026-07-11-lol-support.md  2026-07-11-multi-voice-tts.md  2026-07-11-portable-windows-build.md  2026-07-11-template-seeded-llm.md  2026-07-11-template-split-phrases.md  2026-07-12-chatterbox-tts.md  2026-07-12-s1-mini-tts.md  spike-chatterbox-results.md  spike-results.md
docs/superpowers/specs/: 2026-07-11-lol-ally-teasing-design.md  2026-07-11-lol-support-design.md  2026-07-11-multi-voice-tts-design.md  2026-07-11-portable-windows-build-design.md  2026-07-11-template-seeded-llm-design.md  2026-07-11-template-split-phrases-design.md  (+2 more)
scripts/: build_portable.py  fake_release.py  launcher.c  smoke_test.py
src/stream_director/: __init__.py  broadcast.py  config.py  db.py  director.py  main.py  paths.py  server.py  stimulus.py  tts.py  update_check.py  updater.py
src/wot_ai_commentator/: __init__.py  config.py  db.py  director.py  events.py  main.py  server.py  session_memory.py  tts.py
tests/: test_commands.py  test_config.py  test_db.py  test_director.py  test_flavor_tone.py  test_games_base.py  test_gemini.py  test_lol_client.py  test_lol_event_log.py  test_lol_flavor.py  test_lol_mapper.py  test_lol_memory.py  test_main.py  test_memory.py  test_openai_compat.py  test_prompts.py  test_router.py  test_server.py  test_template_pool.py  test_tts.py  test_twitch_chat.py  test_update_check.py  test_wot_client.py  test_wot_flavor.py  test_wot_mapper.py  test_wot_memory.py  test_wotstat_client.py  test_wotstat_mapper.py
web/: overlay.html  package-lock.json  package.json  panel.html  vite.config.ts
web/src/overlay/: Overlay.tsx  (+2 more)
(+88 files in other folders)
