[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-director"
version = "0.2.1"
description = "AI-режиссёр стрима: видит игру, комментирует и развлекает зрителей"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "websockets>=12",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
ml = [
    "torch>=2.2",
    "omegaconf>=2.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"stream_director.games.lol" = ["templates/*.txt"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
