[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-director"
version = "0.7.1"
description = "AI-режиссёр стрима: видит игру, комментирует и развлекает зрителей"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "websockets>=12",
    "numpy>=1.26",
    "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
where = ["src"]
